--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -1,192 +1,140 @@
-<!-- Inserted RTD Footer -->
 {% load i18n %}
 {% load core_tags %}
 {% load static %}
 
-<footer class="ui basic segment very padded">
-  <div class="ui horizontal divider very padded">
-  </div>
-
+<footer class="ui basic very padded inverted attached segment">
   <div class="ui container">
-    {% block footer-content %}
 
-      <div class="ui three column stackable doubling grid information very padded">
+    {% block footer_links %}
+      <div class="ui four column stackable grid very padded">
 
         <div class="column">
-          <h4 class="ui sub header">{% trans 'Stay Updated' %}</h4>
-
-          <div class="ui list">
-            <a href="https://blog.readthedocs.com/" class="item">{% trans 'Blog' %}</a>
-            <div class="item">
-              <a href="https://github.com/rtfd/readthedocs.org" rel="noopener noreferrer"><i class="large blue fa-brands fa-github icon"></i></a>
-              <a href="https://twitter.com/readthedocs" rel="noopener noreferrer"><i class="large blue fa-brands fa-twitter icon"></i></a>
-            </div>
-          </div>
-
-          <div class="ui form">
-            <form action="https://readthedocs.us3.list-manage.com/subscribe/post?u=a6a22369cc2b356379cf789ca&amp;id=a85a83a5a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <p>{% trans 'Sign up for our newsletter to get our latest blog updates delivered to your inbox weekly.' %}</p>
-
-              <div class="field">
-                <label for="mce-EMAIL">{% trans 'Email' %}</label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="you@example.com">
+          <div class="ui vertical inverted text menu">
+            {% block menu_news %}
+              <h4 class="ui inverted sub header">{% translate 'Stay updated' %}</h4>
+              <a class="item" href="https://blog.readthedocs.com/">{% translate 'Blog' %}</a>
+              <a class="item" href="https://landing.mailerlite.com/webforms/landing/t0a9l4">{% translate 'Newsletter' %}</a>
+              <a class="item" href="https://status.readthedocs.com/">{% translate 'Status' %}</a>
+              <div class="item">
+                <a href="https://github.com/readthedocs/" aria-label="{% translate 'Read the Docs on GitHub' %}" rel="noopener noreferrer"><i class="icon large fa-brands fa-github"></i></a>
+                <a href="https://twitter.com/readthedocs" aria-label="{% translate 'Read the Docs on Twitter' %}" rel="noopener noreferrer"><i class="icon large fa-brands fa-twitter"></i></a>
               </div>
-
-              <div id="mce-responses">
-                <div class="ui hidden response" id="mce-error-response"></div>
-                <div class="ui hidden response" id="mce-success-response"></div>
-              </div>
-              {% comment %}Real people should not fill this in and expect good things - do not remove this or risk form bot signups{% endcomment %}
-              <input type="hidden" aria-hidden="true" name="b_a6a22369cc2b356379cf789ca_a85a83a5a5" tabindex="-1" value="">
-
-              <input class="ui primary button" type="submit" value="{% trans 'Subscribe' %}" name="subscribe" id="mc-embedded-subscribe" class="button">
-            </form>
+            {% endblock menu_news %}
           </div>
         </div>
 
         <div class="column">
-          <h4 class="ui sub header">{% trans 'Get Involved' %}</h4>
-
-          <div class="ui list">
-            <a class="item" href="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html">{% trans 'Getting Started Guide' %}</a>
-            <a class="item" href="https://docs.readthedocs.io">{% trans 'Documentation' %}</a>
-            <a class="item" href="https://docs.readthedocs.io/page/contribute.html">{% trans 'Contributing' %}</a>
-            <a class="item" href="https://docs.readthedocs.io/page/team.html">{% trans 'Team' %}</a>
-            <a class="item" href="https://docs.readthedocs.io/page/open-source-philosophy.html">{% trans 'Open Source Philosophy' %}</a>
+          <div class="ui vertical inverted text menu">
+            {% block menu_learn %}
+              <h4 class="ui inverted sub header">{% translate 'Learn more' %}</h4>
+              <a class="item" href="https://docs.readthedocs.io">{% translate 'Documentation' %}</a>
+              <a class="item" href="https://docs.readthedocs.io/page/tutorial/index.html">{% translate 'Getting started guide' %}</a>
+              <a class="item" href="https://docs.readthedocs.io/page/config-file/v2.html">{% translate 'Configure your project' %}</a>
+            {% endblock menu_learn %}
           </div>
         </div>
 
         <div class="column">
-          <h4 class="ui sub header">{% trans 'Business Info' %}</h4>
+          <div class="ui vertical inverted text menu">
+            {% block menu_services %}
+              <h4 class="ui inverted sub header">{% translate 'Services' %}</h4>
+              <a class="item" href="/pricing.html">{% translate 'Pricing' %}</a>
+              <a class="item" href="/product.html">{% translate 'Features' %}</a>
+              <a class="item" href="https://readthedocs.org">{% translate 'Open-source hosting' %}</a>
+              <a class="item" href="https://www.ethicalads.io/advertisers/?ref=rtd">{% translate 'Advertise with us' %}</a>
+              <a class="item" href="https://docs.readthedocs.io/page/privacy-policy.html">{% translate 'Privacy policy' %}</a>
+              <a class="item" href="https://docs.readthedocs.io/page/terms-of-service.html">{% translate 'Terms of service' %}</a>
+            {% endblock menu_services %}
+          </div>
+        </div>
 
-          <div class="ui list">
-            {% url "advertising" as advertising_url %}
-            <a class="item" href="{{ advertising_url | default:'https://readthedocs.org/sustainability/advertising/' }}">{% trans 'Advertise with Us' %}</a>
-            <a class="item" href="https://readthedocs.com">{% trans 'Read the Docs for Business' %}</a>
-            {% url "donate" as donate_url %}
-            <a class="item" href='{{ donate_url }}'>{% trans 'Supporters' %}</a>
-            <a class="item" href="https://docs.readthedocs.io/page/privacy-policy.html">{% trans 'Privacy Policy' %}</a>
-            <a class="item" href="https://docs.readthedocs.io/page/terms-of-service.html">{% trans 'Terms of Service' %}</a>
-            <a class="item" href="https://read-the-docs-guidelines.readthedocs-hosted.com/">{% trans 'Branding' %}</a>
+        <div class="column">
+          <div class="ui vertical inverted text menu">
+            {% block menu_about %}
+              <h4 class="ui inverted sub header">{% translate 'About us' %}</h4>
+              <a class="item" href="{{ SITEURL }}/company.html">Company</a>
+              <a class="item" href="https://docs.readthedocs.io/page/team.html">{% translate 'Team' %}</a>
+              <a class="item" href="https://dev.readthedocs.io/page/contribute.html">{% translate 'Contributing' %}</a>
+            {% endblock menu_about %}
           </div>
         </div>
 
       </div>
+    {% endblock footer_links %}
 
-      <div class="ui basic center aligned segment">
-        <div class="ui very relaxed horizontal list">
-          <div class="left aligned item">
-            <i class="large fa-duotone fa-copyright middle aligned icon"></i>
-            <div class="content">
-              <div class="header">{% trans 'Copyright' %}</div>
-              <div class="description">{% now "Y" %}, {% trans 'Read the Docs, Inc & contributors' %}</div>
+    {% block footer_meta %}
+      <div class="ui inverted horizontally fitted very padded center aligned basic segment">
+        <div class="ui centered grid">
+          <div class="six wide computer seven wide tablet twelve wide mobile column">
+            <div class="ui inverted mini header">
+              <i class="fa-duotone fa-copyright middle aligned grey icon"></i>
+              <div class="content">
+                {% translate 'Copyright' %}
+                <div class="sub header">{% translate 'Read the Docs, Inc and contributors' %}</div>
+              </div>
             </div>
           </div>
-          <div class="left aligned item">
-            <i class="large fa-duotone fa-code-branch icon"></i>
-            <div class="content">
-              <div class="header">{% trans 'Version' %}</div>
-              <div class="description">
-                <a href="http://docs.readthedocs.io/page/changelog.html">
+          <div class="three wide computer four wide tablet twelve wide mobile column">
+            <div class="ui inverted mini header">
+              <i class="fa-duotone fa-code-branch middle aligned grey icon"></i>
+              <div class="content">
+                {% translate 'Version' %}
+                <a class="sub header" href="http://docs.readthedocs.io/page/changelog.html">
                   {% readthedocs_version %}
                 </a>
               </div>
             </div>
           </div>
-          <div class="left aligned item">
-            <i class="large fa-duotone fa-language icon"></i>
-            <div class="content">
-              <div class="header">{% trans 'Language' %}</div>
-              <div class="description">
-                {% block language-select-form %}
-                  {% get_current_language as current_lang %}
-                  <form action="/i18n/setlang/" method="post">
-                    <div class="field">
-                      <input name="next" type="hidden" value="/" />
-                    </div>
-                    {% csrf_token %}
-                    <div class="ui dropdown">
-                      <span class="text">{{ current_lang | language_name_local }}</span>
-                      <i class="fa-solid fa-caret-down icon"></i>
-                      <div class="menu">
-                        {% for lang in LANGUAGES %}
-                          <div class="item {% if lang.0 == current_lang %}active{% endif %}" data-value="{{ lang.0 }}">
-                            {{ lang.0 | language_name_local }} ({{ lang.1 }})
-                          </div>
-                        {% endfor %}
+          <div class="three wide computer four wide tablet twelve wide mobile column">
+            <div class="ui inverted mini header">
+              <i class="fa-duotone fa-language middle aligned grey icon"></i>
+              <div class="content">
+                {% translate 'Language' %}
+                <div class="sub header">
+                  {% block language-select-form %}
+                    {% get_current_language as current_lang %}
+                    <form action="/i18n/setlang/" method="post">
+                      <div class="field">
+                        <input name="next" type="hidden" value="{{ request.path }}" />
                       </div>
-                    </div>
-                  </form>
-                {% endblock language-select-form %}
+                      {% csrf_token %}
+                      <div class="ui bottom left pointing scrolling dropdown">
+                        <span class="text">{{ current_lang | language_name_local }}</span>
+                        <i class="fa-solid fa-caret-down icon"></i>
+                        <div class="menu">
+                          {% for lang in LANGUAGES %}
+                            <div class="item {% if lang.0 == current_lang %}active{% endif %}" data-value="{{ lang.0 }}">
+                              {{ lang.0 | language_name_local }} ({{ lang.1 }})
+                            </div>
+                          {% endfor %}
+                        </div>
+                      </div>
+                    </form>
+                  {% endblock language-select-form %}
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    {% endblock footer_meta %}
 
-      <div class="ui horizontal divider very padded">
+    {% block footer_sponsors %}
+      <div class="ui inverted small horizontal very padded divider">
         Sponsored by
       </div>
 
-
-      <div class="ui six column doubling grid container">
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://azure.microsoft.com" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/azure.png' %}" alt="Microsoft Azure" />
-              Microsoft Azure
-              <div class="sub header">Cloud Computing</div>
-            </a>
-          </div>
-        </div>
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://cloudflare.com" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/cloudflare.png' %}" alt="CloudFlare">
-              Cloudflare
-              <div class="sub header">DNS &amp; SSL</div>
-            </a>
-          </div>
-        </div>
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://sentry.io/" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/sentry.png' %}" alt="Sentry">
-              Sentry
-              <div class="sub header">Monitoring</div>
-            </a>
-          </div>
-        </div>
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://www.elastic.co/" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/elastic.png' %}" alt="Elastic">
-              Elastic
-              <div class="sub header">Search</div>
-            </a>
-          </div>
-        </div>
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://newrelic.com/" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/newrelic.png' %}" alt="New Relic">
-              New Relic
-              <div class="sub header">Performance</div>
-            </a>
-          </div>
-        </div>
-        <div class="column bottom aligned centered">
-          <div class="ui tiny header centered">
-            <a href="https://www.pagerduty.com/" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/pagerduty.png' %}" alt="PagerDuty">
-              PagerDuty
-              <div class="sub header">Monitoring</div>
-            </a>
-          </div>
+      <div class="ui horizontally fitted basic segment">
+        <div class="ui six doubling stackable inverted mini cards">
+          {% include 'includes/footer/sponsor.html' with image='aws.png' link='http://aws.amazon.com' name='AWS' service=_('Cloud computing') %}
+          {% include 'includes/footer/sponsor.html' with image='cloudflare.png' link='http://cloudflare.com' name='Cloudflare' service=_('DNS and SSL') %}
+          {% include 'includes/footer/sponsor.html' with image='sentry.png' link='https://sentry.io/' name='Sentry' service=_('Monitoring') %}
+          {% include 'includes/footer/sponsor.html' with image='elastic.png' link='https://www.elastic.co/' name='Elastic' service=_('Search') %}
+          {% include 'includes/footer/sponsor.html' with image='newrelic.png' link='https://newrelic.com/' name='New Relic' service=_('Performance') %}
+          {% include 'includes/footer/sponsor.html' with image='pagerduty.png' link='https://www.pagerduty.com/' name='PagerDuty' service=_('Monitoring') %}
         </div>
       </div>
-
-    {% endblock footer-content %}
+    {% endblock footer_sponsors %}
 
   </div>
 </footer>
