--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -38,8 +38,8 @@
           <div class="ui vertical inverted text menu">
             {% block menu_services %}
               <h4 class="ui inverted sub header">{% translate 'Services' %}</h4>
-              <a class="item" href="/pricing.html">{% translate 'Pricing' %}</a>
-              <a class="item" href="/product.html">{% translate 'Features' %}</a>
+              <a class="item" href="https://readthedocs.com/pricing/">{% translate 'Pricing' %}</a>
+              <a class="item" href="https://readthedocs.com/about/">{% translate 'Features' %}</a>
               <a class="item" href="https://readthedocs.org">{% translate 'Open-source hosting' %}</a>
               <a class="item" href="https://www.ethicalads.io/advertisers/?ref=rtd">{% translate 'Advertise with us' %}</a>
               <a class="item" href="https://docs.readthedocs.io/page/privacy-policy.html">{% translate 'Privacy policy' %}</a>
@@ -52,7 +52,6 @@
           <div class="ui vertical inverted text menu">
             {% block menu_about %}
               <h4 class="ui inverted sub header">{% translate 'About us' %}</h4>
-              <a class="item" href="{{ SITEURL }}/company.html">Company</a>
               <a class="item" href="https://docs.readthedocs.io/page/team.html">{% translate 'Team' %}</a>
               <a class="item" href="https://dev.readthedocs.io/page/contribute.html">{% translate 'Contributing' %}</a>
             {% endblock menu_about %}
