--- a/src/sui/theme.less
+++ b/src/sui/theme.less
@@ -35,18 +35,19 @@
 //     this. Our overrides and variables will come from our themes instead.
 
 @import "@{themesFolder}/default/globals/site.variables";
-@import (optional) "themes/rtd-common/globals/site.variables";
+@import (optional) "~@readthedocs/sui-common-theme/globals/site.variables";
 @import (optional) "themes/@{theme}/globals/site.variables";
 @import (optional) "@{siteFolder}/globals/site.variables";
 
 @import "@{themesFolder}/default/@{type}s/@{element}.variables";
-@import (optional) "themes/rtd-common/@{type}s/@{element}.variables";
+@import (optional)
+  "~@readthedocs/sui-common-theme/@{type}s/@{element}.variables";
 @import (optional) "themes/@{theme}/@{type}s/@{element}.variables";
 @import (optional) "@{siteFolder}/@{type}s/@{element}.variables";
 
 // Color map
 @import "@{themesFolder}/default/globals/colors.less";
-@import (optional) "themes/rtd-common/globals/colors.less";
+@import (optional) "~@readthedocs/sui-common-theme/globals/colors.less";
 @import (optional) "themes/@{theme}/globals/colors.less";
 
 // Mixins
@@ -67,7 +68,8 @@
   & when not (@element = "icon") {
     @import (optional) "@{themesFolder}/default/@{type}s/@{element}.overrides";
   }
-  @import (optional) "themes/rtd-common/@{type}s/@{element}.overrides";
+  @import (optional)
+    "~@readthedocs/sui-common-theme/@{type}s/@{element}.overrides";
   @import (optional) "themes/@{theme}/@{type}s/@{element}.overrides";
   @import (optional) "@{siteFolder}/@{type}s/@{element}.overrides";
 }
