Update project header bar
This will definitely need a second pass, but at least includes most of
the elements that we'll want in the header. The navigation menu is more
strictly for elements directly related to Project, and moves mocked
linkes for translations and subprojects to header elements that aren't
always showing on other Project views.

--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -53,18 +53,15 @@
     {# TODO remove subnav-bar block, it isn't used #}
     {% block subnav-bar %}{% endblock %}
 
-    {# TODO remove project_editing block, it isn't used #}
-    {% block project_editing %}{% endblock %}
-
     {% block content-wrapper %}
-        <div class="ui very padded container">
+      <div class="ui very padded container">
+        {# TODO move admin-bar usage to content-header #}
+        {% block admin-bar %}{% endblock %}
 
-          {% block admin-bar %}{% endblock %}
+        {% block content-header %}{% endblock %}
 
-          {% block content-header %}{% endblock %}
-
-          {% block content %}{% endblock %}
-        </div>
+        {% block content %}{% endblock %}
+      </div>
     {% endblock %}
 
     {% block footer %}
