--- a/readthedocsext/theme/templates/base_filter.html
+++ b/readthedocsext/theme/templates/base_filter.html
@@ -4,7 +4,7 @@
 
 {% block nav-dashboard %} class="active"{% endblock %}
 
-{% block project_editing %}
+{% block content-header %}
 
     <!-- BEGIN filter bar -->
     <div id="project_bar">
