--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -6,9 +6,9 @@
 
 {% block title %}{{ build.project.name }}{% endblock %}
 
-{% block project_editing %}
+{% block content-header %}
   {% with builds_active="active" %}
-    {% include "core/project_bar.html" %}
+    {% include "projects/partials/header.html" %}
   {% endwith %}
 {% endblock %}
 
