--- a/readthedocsext/theme/templates/projects/version_form.html
+++ b/readthedocsext/theme/templates/projects/version_form.html
@@ -15,9 +15,9 @@
   {% endif %}
 {% endblock %}
 
-{% block project_editing %}
+{% block content-header %}
   {% with versions_active="active" %}
-    {% include "core/project_bar.html" %}
+    {% include "projects/partials/header.html" %}
   {% endwith %}
 {% endblock %}
 
