--- a/readthedocsext/theme/templates/builds/build_list.html
+++ b/readthedocsext/theme/templates/builds/build_list.html
@@ -4,9 +4,9 @@
 
 {% block title %}{% trans "Builds" %}{% endblock %}
 
-{% block project_editing %}
+{% block content-header %}
   {% with builds_active="active" %}
-    {% include "core/project_bar.html" %}
+    {% include "projects/partials/header.html" %}
   {% endwith %}
 {% endblock %}
 
