--- a/readthedocsext/theme/templates/projects/project_embed.html
+++ b/readthedocsext/theme/templates/projects/project_embed.html
@@ -8,9 +8,9 @@
 Tools
 {% endblock title %}
 
-{% block project_editing %}
+{% block content-header %}
   {% with tools_active="active" %}
-    {% include "core/project_bar.html" %}
+    {% include "projects/partials/header.html" %}
   {% endwith %}
 {% endblock %}
 
