Port over header from website and tune for the application
This:

- Brings over the same element structure from the website
- Adds some icon elements in the top right for notifications, help, user
  menu
- Adds main navigation menu items to the top
- Adds search bar. Currently this is only for project instances, but can
  be multipurpose at some point

Fixes #112

--- a/readthedocsext/theme/templates/projects/project_dashboard_base.html
+++ b/readthedocsext/theme/templates/projects/project_dashboard_base.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "projects/base.html" %}
 
 {% load i18n %}
 {% load socialaccount %}
-
 {% load pagination_tags %}
 
 {% block title %}{% trans "Projects" %}{% endblock %}
@@ -14,110 +13,3 @@
   {# TODO ??? {% include "projects/partials/project_list.html" with objects=filter.qs %} #}
   {% include "projects/partials/project_list.html" with objects=project_list %}
 {% endblock content %}
-
-{% block oldshit %}
-  <!-- BEGIN your projects list -->
-  <div class="ui very padded grid stackable">
-    <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
-
-      {% if project_list %}
-
-        <div class="ui basic segment">
-          {% block project_import_button %}
-            <form class="ui form" method="get" action="{{ projects_import_url }}">
-              <input class="ui button" type="submit" value="{% trans "Import a Project" %}" />
-            </form>
-          {% endblock %}
-          <h3>{% trans "Projects" %}</h3>
-
-          <div class="ui items divided">
-            {% for project in project_list %}
-                <a href="{% url "projects_manage" project.slug %}" class="item">
-                  <div class="left aligned content">
-                    <div class="header">
-                    {% block project-name %}
-                      {{ project.name }}
-                    {% endblock %}
-                    {% with build=project.get_latest_build %}
-                    </div>
-                  </div>
-                    <span class="ui right aligned content segment">
-                      <div class="meta">
-                      {% if build %}
-                        <time datetime="{{ build.date|date:"c" }}" title="{{ build.date|date:"DATETIME_FORMAT" }}">
-                          <small>{% blocktrans with date=build.date|timesince %}{{ date }} ago{% endblocktrans %}</small>
-                        </time>
-                        {% if build.success %}
-                          <span class="ui green label">{% trans "passing" %}</span>
-                        {% else %}
-                          <span class="ui red label">{% trans "failing" %}</span>
-                        {% endif %}
-                      {% else %}
-                        <span class="ui gray label">{% trans "No builds yet" %}</span>
-                      {% endif %}
-                      </div>
-                    </span>
-                  {% endwith %}
-                </a>
-            {% endfor %}
-          </div>
-        </div>
-
-      {% else %}
-
-        {% include 'projects/onboard_import.html' %}
-
-      {% endif %}
-    </div>
-  <!-- END your projects list -->
-
-    <div class="four wide computer sixteen wide tablet sixteen wide mobile column" id="dashboard_sidebar">
-      <!-- BEGIN project side bar -->
-      <!-- BEGIN search form -->
-      <form action="{% url 'search' %}" method="GET">
-        <div class="field">
-          <input type="text" name="q" class="search" placeholder="{% trans 'Search Read the Docs' %}">
-          {% if type %}
-            <input type="hidden" name="type" value="{{ type }}">
-          {% endif %}
-          {% if taxonomy %}
-            <input type="hidden" name="taxonomy" value="{{ taxonomy }}">
-          {% endif %}
-        </div>
-      </form>
-      <!-- END search form -->
-
-      <!-- BEGIN social account onboard -->
-      {% get_social_accounts request.user as accounts %}
-      {% if not accounts.github.0 %}
-        <div>
-          <h3>{% trans "Connect your Accounts" %}</h3>
-
-          <p>
-            {% blocktrans trimmed %}
-              Have a GitHub account? Connect your account and import your existing projects automatically.
-            {% endblocktrans %}
-          </p>
-
-          <form class="ui form" method="get" action="{{ social_accounts }}">
-            <input class="ui button" type="submit" value="{% trans "Connect your Accounts" %}" />
-          </form>
-        </div>
-      {% endif %}
-      <!-- END social account onboard -->
-
-      {% block dashboard-onboard-extra %}
-      {% endblock %}
-
-      <h3>{% trans "Learn More" %}</h3>
-      <p>
-        {% blocktrans trimmed with rtd_docs_url="https://docs.readthedocs.io/" %}
-          Check out the <a href="{{ rtd_docs_url }}">documentation for Read the Docs</a>.
-          It contains lots of information about how to get the most out of RTD.
-        {% endblocktrans %}
-      </p>
-    </div>
-  </div>
-
-  <!-- END project side bar -->
-{% endblock %}
