--- a/readthedocsext/theme/templates/projects/project_delete.html
+++ b/readthedocsext/theme/templates/projects/project_delete.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "projects/base.html" %}
+
 {% load i18n %}
 
 {% block title %}{% blocktrans with project.name as name %}Delete {{ name }}?{% endblocktrans %}{% endblock %}
