--- a/readthedocsext/theme/templates/projects/project_analytics.html
+++ b/readthedocsext/theme/templates/projects/project_analytics.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "projects/edit_base.html" %}
+
 {% load i18n %}
 {% load privacy_tags %}
 {% load core_tags %}
