--- a/readthedocsext/theme/templates/projects/project_list.html
+++ b/readthedocsext/theme/templates/projects/project_list.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "projects/base.html" %}
+
 {% load i18n %}
 
 {% load pagination_tags %}
@@ -9,31 +10,23 @@
 
 {% block nav-browse %}class="active"{% endblock %}
 
-
-  {% block content-header %}
-    <div class="ui basic segment">
-      <div class="ui container">
-        <h1>{% blocktrans with tag.name as tag %}Projects tagged with "{{ tag }}"{% endblocktrans %}</h1>
-      </div>
+{% block content-header %}
+  <div class="ui basic segment">
+    <div class="ui container">
+      <h1>{% blocktrans with tag.name as tag %}Projects tagged with "{{ tag }}"{% endblocktrans %}</h1>
     </div>
-
-  {% endblock %}
+  </div>
+{% endblock %}
   
 {% block content %}
-      {% autopaginate project_list 15 %}
+  {% autopaginate project_list 15 %}
+    <div class="ui basic segment">
+      <h3>{% trans "Browse projects" %}</h3>
 
-      <!-- BEGIN projects list -->
-      <div class="ui basic segment">
-        
-          <h3>{% trans "Browse projects" %}</h3>
+      <ul class="ui list">
+        {% include "core/project_list_detailed.html" %}
+      </ul>
 
-              <ul class="ui list">
-                {% include "core/project_list_detailed.html" %}
-              </ul>
-          
-      </div>
-      <!-- END projects list -->
-
-      {% paginate %}
-
+    </div>
+  {% paginate %}
 {% endblock %}
