--- a/readthedocsext/theme/templates/projects/tag_list.html
+++ b/readthedocsext/theme/templates/projects/tag_list.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "projects/base.html" %}
+
 {% load i18n %}
 
 {% block title %}{% trans "Popular tags" %}{% endblock %}
