--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -27,13 +27,15 @@ active_item
   </script>
 
   <div class="ui container">
-    <div class="ui middle aligned vertically padded grid">
+    <div class="ui middle aligned grid">
 
       {% block header_logo %}
         <div class="four wide computer five wide tablet eleven wide mobile left aligned column">
-          <a class="header item" href="{{ SITEURL }}/" aria-label="Read the Docs homepage">
-            <img class="ui image" src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}" width="220" alt="Read the Docs logo"/>
-          </a>
+          <div class="ui horizontally fitted basic segment">
+            <a href="{{ SITEURL }}/" aria-label="Read the Docs homepage">
+              <img class="ui image" src="{% static 'readthedocsext/theme/images/logo-wordmark-dark.svg' %}" width="220" alt="Read the Docs logo"/>
+            </a>
+          </div>
         </div>
       {% endblock header_logo %}
 
