--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -17,9 +17,7 @@
     {# This block is used to pass settings between our application and JS #}
     <script type="application/json" id="site-config">
 {
-  {# TODO make this debug conditional work. It requires altering INTERNAL_IPS #}
-  {% if debug %}"debug": true,{% endif %}
-  "debug": true,
+  "debug": {% debug_enabled as is_debug_enabled %}{{ is_debug_enabled | yesno:"true,false" }},
   "webpack_public_path": "{% get_webpack_static_prefix %}/readthedocsext/theme/"
 }
     </script>
