Fix search dropdown filters

--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -48,7 +48,7 @@
 
 {% block list_placeholder_icon_class %}{% endblock %}
 {% block list_placeholder_header %}
-  This project doesn't have any active versions.
+  {% trans "No versions found for this project or filter" %}
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
   <div class="ui primary button">Activate a version</div>
